syntax = "proto3";

package finance.v0;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/finance/v0;financepb";

// FinanceService provides methods for handling financial operations
service FinanceService {
  // GetBalance retrieves the current balance for a user
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {}
  
  // Deposit adds funds to a user's account
  rpc Deposit(DepositRequest) returns (TransactionResponse) {}
  
  // Withdraw removes funds from a user's account
  rpc Withdraw(WithdrawRequest) returns (TransactionResponse) {}
  
  // Transfer moves funds between two user accounts
  rpc Transfer(TransferRequest) returns (TransactionResponse) {}
  
  // GetTransaction retrieves details of a specific transaction
  rpc GetTransaction(GetTransactionRequest) returns (TransactionResponse) {}
  
  // ListTransactions retrieves a paginated list of transactions for a user
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse) {}
}

// Balance represents a user's current financial balance
message Balance {
  string user_id = 1;
  double amount = 2;
  double locked_amount = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// Transaction represents a financial transaction
message Transaction {
  string id = 1;
  string user_id = 2;
  optional string to_user_id = 3;
  string type = 4;
  double amount = 5;
  string description = 6;
  string status = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// GetBalanceRequest is used to request a user's balance
message GetBalanceRequest {
  string user_id = 1;
}

// GetBalanceResponse returns the user's current balance
message GetBalanceResponse {
  Balance balance = 1;
}

// DepositRequest is used to add funds to a user's account
message DepositRequest {
  string user_id = 1;
  double amount = 2;
  string description = 3;
}

// WithdrawRequest is used to remove funds from a user's account
message WithdrawRequest {
  string user_id = 1;
  double amount = 2;
  string description = 3;
}

// TransferRequest is used to move funds between accounts
message TransferRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  double amount = 3;
  string description = 4;
}

// GetTransactionRequest is used to retrieve a specific transaction
message GetTransactionRequest {
  string transaction_id = 1;
}

// TransactionResponse returns details of a transaction
message TransactionResponse {
  Transaction transaction = 1;
}

// ListTransactionsRequest is used to retrieve a list of transactions
message ListTransactionsRequest {
  string user_id = 1;
  int32 page_size = 2;
  int32 page = 3;
}

// ListTransactionsResponse returns a paginated list of transactions
message ListTransactionsResponse {
  repeated Transaction transactions = 1;
  int32 total_count = 2;
  bool has_more = 3;
} 